# memorycore

./: .gitignore  pyproject.toml
src/memorycore/api/: app.py  dependencies.py  routes.py  schemas.py
src/memorycore/core/: consolidation.py  models.py  retreival.py  retrieval.py  scoring.py
src/memorycore/embeddings/: base.py  local.py  provider.py
src/memorycore/storage/: base.py  memory.py  sqlite.py
tests/: test_consolidation.py  test_decay_reinforcement.py  test_embeddings.py  test_models.py  test_retrieval.py  test_scoring.py  test_storage_contract.py  test_storage_memory.py
