[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memorycore"
version = "0.1.0"
description = "Open Source memory infrastructure for AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Aryan"}
]
dependencies = [
    "pydantic>=2.0",
    "sentence-transformers>=3.0",
]

[ project.optional-dependencies ]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff",
    "mypy",
    "pre-commit",
]

[ tool.ruff ]
line-length = 100
target-version = "py310"

[ tool.ruff.lint ]
select = ["E", "F", "I", "UP", "B"]

[ tool.pytest.ini_options ]
testpaths = ["tests"]

[ tool.mypy ]
python_version = "3.10"
ignore_missing_imports = true